welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: missing arguments for method abs in package math;
follow this method with `_' if you want to treat it as a partially applied function
		if (!( math.abs(10 - math.abs(a)) = math.abs(10 - math.abs(b) ))) {
                            ^close10:5: error: missing arguments for method abs in package math;
follow this method with `_' if you want to treat it as a partially applied function
			if ( math.abs(10 - math.abs(a)) = math.abs(10 - math.abs(b) )) {
                                  ^